--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- video background -->
 <div class="fullscreen-bg">
 	<video class="fullscreen-bg__video" autoplay="" loop="" poster="">
-	<!--	<source src="BG.webm" type="video/webm" poster="poster.jpg"> -->
+		<source src="BG.webm" type="video/webm" poster="poster.jpg">
 		<source src="BG.mp4" type="video/mp4" poster="poster.jpg">
 	</video>
 </div>
